# fastApiProject

./: README.md  foo.db  main.py
files/: api.py
frontend/: Global.gd  export_presets.cfg  filebrowser.gd  filebrowser.tscn  login.gd  login.tscn  project.godot
frontend_qt/: CMakeLists.txt  LoginWin.cpp  LoginWin.h  LoginWin.ui  Path.cpp  Path.h  QzaFile.cpp  QzaFile.h  QzaFile.ui  fileinfo_dialog.ui  globals.cpp  globals.h  main.cpp  ui_LoginWin.h  ui_QzaFile.h  uic
login/: api.py
quotes/: api.py
quotes/crawler/: QuotesSpider_CN.py  QuotesSpider_EN.py  quotes_cn.txt  quotes_en.txt  transfer_to_sql.py
test/: login_test.py
